packages/parser/tests/snapshots/fixtures__fixtures@attributes.mg.snap
---
source: packages/parser/tests/fixtures.rs
expression: "parse_unfolded(&std::fs::read_to_string(path).unwrap())"
input_file: packages/parser/tests/fixtures/attributes.mg
---
body:
  - kind:
      Marker:
        depth: 2
        kind: Heading
    attributes:
      entries:
        - value: red
    children:
      - kind:
          Text: My Heading
    span:
      start: 0
      end: 16
      start_line: 0
      end_line: 0
  - kind:
      Marker:
        depth: 2
        kind: Heading
    attributes:
      entries:
        - value: red
    children:
      - kind:
          Text: My Heading
    span:
      start: 17
      end: 34
      start_line: 1
      end_line: 1
  - kind:
      Marker:
        depth: 1
        kind: UnorderedList
    children:
      - kind:
          Text: "list item with "
      - kind:
          Delimiter: Strong
        attributes:
          entries:
            - value: red
        children:
          - kind:
              Text: BOLD
      - kind:
          Text: " content"
    span:
      start: 36
      end: 74
      start_line: 3
      end_line: 3
