packages/parser/tests/snapshots/fixtures__fixtures@data-attributes.mg.snap
---
source: packages/parser/tests/fixtures.rs
expression: "parse(&std::fs::read_to_string(path).unwrap())"
input_file: packages/parser/tests/fixtures/data-attributes.mg
---
meta: ~
body:
  - kind:
      Marker:
        depth: 1
        kind: UnorderedList
    children:
      - kind:
          Text: "{:key \"value\"}: Table attribute"
  - kind:
      Marker:
        depth: 1
        kind: UnorderedList
    children:
      - kind:
          Text: "[\"item 1\" \"item 2\"]: List attribute"
